# ra2-clicker

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  installer.iss
.github/workflows/: release.yml
src/: app.rs  config.rs  engine.rs  main.rs
ui/: app.slint
