[package]
name = "ra2-clicker"
version = "2.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.9", default-features = false, features = ["backend-winit", "renderer-software", "compat-1-2"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
mimalloc = "0.1"

[build-dependencies]
slint-build = "1.9"
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
